// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Button Types Clear should display clear button 1`] = `
<View
  style={
    Object {
      "borderRadius": 3,
      "overflow": "hidden",
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2089dc",
            "fontSize": 18,
            "paddingBottom": 1,
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        Clear
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button Component Button Types Clear should display clear button disabled 1`] = `
<View
  style={
    Object {
      "borderRadius": 3,
      "overflow": "hidden",
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": true,
      }
    }
    activeOpacity={0.3}
    delayPressIn={0}
    disabled={true}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": Object {
              "color": Array [
                208,
                8,
                63,
              ],
              "model": "hsl",
              "valpha": 1,
            },
            "fontSize": 18,
            "paddingBottom": 1,
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        Clear
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button Component Button Types Clear should display raised clear button 1`] = `
<View
  style={
    Object {
      "borderRadius": 3,
      "overflow": "hidden",
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2089dc",
            "fontSize": 18,
            "paddingBottom": 1,
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        Clear
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button Component Button Types Outline should display outline button 1`] = `
<View
  style={
    Object {
      "borderRadius": 3,
      "overflow": "hidden",
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2089dc",
            "fontSize": 18,
            "paddingBottom": 1,
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        Outline
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button Component Button Types Outline should display outline button disabled 1`] = `
<View
  style={
    Object {
      "borderRadius": 3,
      "overflow": "hidden",
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": true,
      }
    }
    activeOpacity={0.3}
    delayPressIn={0}
    disabled={true}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": Object {
            "color": Array [
              208,
              8,
              63,
            ],
            "model": "hsl",
            "valpha": 1,
          },
          "borderRadius": 3,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": Object {
              "color": Array [
                208,
                8,
                63,
              ],
              "model": "hsl",
              "valpha": 1,
            },
            "fontSize": 18,
            "paddingBottom": 1,
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        Outline
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button Component Button Types Outline should display raised outline button 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "borderRadius": 3,
      "overflow": "visible",
      "shadowColor": "rgba(0,0,0, .4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2089dc",
            "fontSize": 18,
            "paddingBottom": 1,
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        Outline
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button Component Button Types Solid should display raised solid button 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "borderRadius": 3,
      "overflow": "visible",
      "shadowColor": "rgba(0,0,0, .4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 18,
            "paddingBottom": 1,
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        Solid
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button Component Button Types Solid should display solid button 1`] = `
<View
  style={
    Object {
      "borderRadius": 3,
      "overflow": "hidden",
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 18,
            "paddingBottom": 1,
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        Solid
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button Component Button Types Solid should display solid button disabled 1`] = `
<View
  style={
    Object {
      "borderRadius": 3,
      "overflow": "hidden",
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": true,
      }
    }
    activeOpacity={0.3}
    delayPressIn={0}
    disabled={true}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "hsl(208, 8%, 90%)",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "color": Object {
              "color": Array [
                208,
                8,
                63,
              ],
              "model": "hsl",
              "valpha": 1,
            },
            "fontSize": 18,
            "paddingBottom": 1,
            "paddingTop": 2,
            "textAlign": "center",
          }
        }
      >
        Solid
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Button Component should apply values from theme 1`] = `
<View
  style={
    Object {
      "borderRadius": 3,
      "overflow": "hidden",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": true,
        "disabled": false,
      }
    }
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": Object {
          "_animation": null,
          "_children": Array [],
          "_listeners": Object {},
          "_offset": 0,
          "_startingValue": 1,
          "_value": 1,
        },
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="small"
        style={
          Object {
            "marginVertical": 2,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Button Component should render without issues 1`] = `
<View
  style={
    Object {
      "borderRadius": 3,
      "overflow": "hidden",
    }
  }
>
  <TouchableOpacity
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    activeOpacity={0.3}
    delayPressIn={0}
    disabled={false}
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderColor": "#2089dc",
          "borderRadius": 3,
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 8,
        }
      }
    />
  </TouchableOpacity>
</View>
`;
